--- a/src/assets/toolkit/styles/partials/_modules.scss
+++ b/src/assets/toolkit/styles/partials/_modules.scss
@@ -93,21 +93,3 @@
 		}
 	}
 }
-
-// ========================
-// Curriculum Module
-// ========================
-.curriculum-course {
-	.icon-block:last-child {
-		padding-bottom: 0;
-	}
-}
-
-// ========================
-// Instructor Module
-// ========================
-.instructor-course {
-	.team-block:last-child {
-		padding-bottom: 0;
-	}
-}
